# turtlebot1

./: README.md
doc/: .gitignore
doku/: .gitignore  Installation_Overveiw.odp
turtlebot1_descriptions/create_description/urdf/: create.urdf.xacro  create_gazebo.urdf.xacro
turtlebot1_descriptions/kobuki_description/launch/: view_model.launch
turtlebot1_descriptions/kobuki_description/urdf/: kobuki_gazebo.urdf.xacro
turtlebot1_descriptions/roomba_description/: CMakeLists.txt  package.xml
turtlebot1_descriptions/roomba_description/launch/: black_roomba.launch  white_roomba.launch
turtlebot1_descriptions/roomba_description/urdf/: roomba.urdf.xacro
turtlebot1_descriptions/turtlebot1_descriptions_launch/: CMakeLists.txt  package.xml
turtlebot1_descriptions/turtlebot1_descriptions_launch/robots/: create_circles_asus_xtion_pro.urdf.xacro  create_circles_kinect.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro  roomba_-_-.urdf.xacro  roomba_circles_asus_xtion_pro.urdf.xacro  roomba_circles_kinect.urdf.xacro
turtlebot1_descriptions/turtlebot1_descriptions_launch/urdf/: turtlebot_library.urdf.xacro
turtlebot1_simulations/turtlebot1_gazebo/: CMakeLists.txt  package.xml
turtlebot1_simulations/turtlebot1_gazebo/launch/: turtlebot1.launch  turtlebot1_default.launch  turtlebot1_empty_world.launch  turtlebot1_full.launch  turtlebot1_launch_all_robots.launch  (+1 more)
turtlebot1_simulations/turtlebot1_rviz/: CMakeLists.txt  package.xml
turtlebot1_teleop/: CMakeLists.txt  package.xml  teleop_key.launch
(+7 files in other folders)
